2003-11-21  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (install): Explicitely create directories.  Install
	README to $(prefix)/share/doc/Cygwin.
	* README: New file.

2003-11-21  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver.cc (print_usage): Fix scrambled output.

2003-11-20  Corinna Vinschen  <corinna@vinschen.de>

	* cygserver-config: Slightly modify printed message.

2003-11-20  Corinna Vinschen  <corinna@vinschen.de>

	* Makefile.in (install): Install cygserver-config script to bindir.
	* cygserver-config: New script.

2003-11-19  Corinna Vinschen  <corinna@vinschen.de>

	Don't use safe_new but new throughout.  Fix copyright dates
	throughout.
	* Makefile.in: Accomodate all new files and name changes.
	Add a *.d dependency.
	(sbindir): Add.
	(etcdir): Drop in favor of more appropriate sysconfdir definition.
	(sysconfdir): Add.
	(CXXFLAGS): Add -MMD flag. Add SYSCONFDIR definition.
	(.SUFFIXES): Add.
	(install): Add action items.
	(libclean): New target.
	(fullclean): Ditto.
	* bsd_helper.cc: New file.
	* bsd_helper.h: Ditto.
	* bsd_log.cc: Ditto.
	* bsd_log.h: Ditto.
	* bsd_mutex.cc: Ditto.
	* bsd_mutex.h: Ditto.
	* client.cc: Rearrange to build as less as possible if
	__INSIDE_CYGWIN__.
	(client_request::handle_request): Add Message Queue and Semaphore
	handling.
	* cygserver.cc: Rearrange to build as less as possible if
	__INSIDE_CYGWIN__. Use new debug/log/panic logging functions.
	(DEF_CONFIG_FILE): New definition for configuration file.  Use
	throughout.
	(getfunc): Remove.
	(__cygserver__printf): Remove.
	(client_request_attach_tty::serve): Return error if impersonation
	fails.
	(print_usage): Pump up help message.
	(print_version): Add output of default configuration file.
	(main): Accommodate new options.  Allow overwrite of threading options
	from config file.  Call several new initialization functions.  Drop
	printing dots.  Don't define SIGHANDLE inline.
	* cygserver.conf: New file.
	* cygserver_process.h: Rename to process.h.